<resources>
    <string name="app_name" translatable="false">Let\'s Eat</string>
    <string name="about_title" translatable="false">Let\'s Eat %1$s</string>
    <string name="about_message">Created by Nguyen Truong Thinh</string>
    <string name="menu_about">About</string>
    <string name="title_activity_maps" translatable="false">Let\'s Eat</string>
    <string name="bookmark_image">Bookmark image</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter notes</string>
    <string name="name">Name</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete?</string>
    <string name="open_drawer_nav">Open Drawer Navigation</string>
    <string name="close_drawer_nav">Close Drawer Navigation</string>
    <string name="photo_option">Photo Option</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="camera_capture">Camera Capture</string>
    <string name="gallery_pick">Gallery Pick</string>
    <string name="category">Category</string>
    <string name="option_ok">OK</string>
    <string name="bee_forever_com" translatable="false">beemobile.forever.com</string>
</resources>