<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="bookmarkDetailsView"
                  type="com.forever.bee.lets_eat.viewmodel.BookmarkDetailsViewModel.BookmarkDetailsView"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.LetsEat.AppBarOverlay">
            <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">
                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/Theme.LetsEat.PopupOverlay"/>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewPlace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="300dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/default_photo"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewName"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewPlace"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewCategoryLabel"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_marginStart="@dimen/eight"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
                        app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"

                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewNotes"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@string/notes"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewCategoryLabel"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewPhone"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNotes"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewAddress"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:layout_marginStart="@dimen/eight"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPhone"
                />
                <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="start"
                        app:constraint_referenced_ids="editTextName, editTextNotes, editTextPhone, editTextAddress, spinnerCategory"
                />
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        style="@style/BookmarkEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:text="@{bookmarkDetailsView.name}"
                        android:layout_marginTop="@dimen/sixteen"
                        android:layout_marginStart="@dimen/sixteen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@id/imageViewPlace"
                />
                <ImageView
                        android:id="@+id/imageViewCategory"
                        android:layout_width="@dimen/twenty_four"
                        android:layout_height="@dimen/twenty_four"
                        android:src="@drawable/ic_other"
                        android:layout_marginStart="@dimen/sixteen"
                        app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
                />
                <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:layout_marginTop="@dimen/sixteen"
                        android:layout_marginStart="@dimen/eight"
                        android:layout_marginEnd="@dimen/eight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageViewCategory"
                        app:layout_constraintTop_toBottomOf="@+id/editTextName"
                />
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNotes"
                        style="@style/BookmarkEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_notes"
                        android:text="@{bookmarkDetailsView.notes}"
                        android:layout_marginStart="@dimen/sixteen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
                />
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        style="@style/BookmarkEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:text="@{bookmarkDetailsView.phone}"
                        android:layout_marginStart="@dimen/sixteen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@id/editTextNotes"
                />
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAddress"
                        style="@style/BookmarkEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:text="@{bookmarkDetailsView.address}"
                        android:inputType="textMultiLine"
                        android:layout_marginStart="@dimen/sixteen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/quantum_deeporange700"
                app:srcCompat="@android:drawable/ic_dialog_email"
        />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>